# clipboard-painter

./: .gitignore  README.md  pyproject.toml  requirements.txt  verify.py
config/: rules.yaml
src/: classifier.py  clipboard_daemon.py  gui.py  logger.py  sanitizer.py
